--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "returnukhti-backend",
   "version": "1.0.0",
+  "description": "Backend Return Ukhti - Express + Sequelize + PostgreSQL (Supabase)",
   "main": "server.js",
   "type": "commonjs",
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node server.js"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
